--- a/Audyt innowacyjności/Audyt innowacyjności.csproj
+++ b/Audyt innowacyjności/Audyt innowacyjności.csproj
@@ -122,6 +122,10 @@
     <Compile Include="Migrations\201808100657041_new question.Designer.cs">
       <DependentUpon>201808100657041_new question.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808111814018_krsToString.cs" />
+    <Compile Include="Migrations\201808111814018_krsToString.Designer.cs">
+      <DependentUpon>201808111814018_krsToString.cs</DependentUpon>
+    </Compile>
     <Compile Include="Page10.xaml.cs">
       <DependentUpon>Page10.xaml</DependentUpon>
     </Compile>
@@ -161,7 +165,6 @@
     <Compile Include="Result.xaml.cs">
       <DependentUpon>Result.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ModelBase.cs" />
     <Compile Include="ViewModel\QuestionViewModel.cs" />
     <Compile Include="ViewModel\SurveyViewModel.cs" />
@@ -291,6 +294,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808100657041_new question.resx">
       <DependentUpon>201808100657041_new question.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808111814018_krsToString.resx">
+      <DependentUpon>201808111814018_krsToString.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
