--- a/Audyt innowacyjności/Audyt innowacyjności.csproj
+++ b/Audyt innowacyjności/Audyt innowacyjności.csproj
@@ -94,7 +94,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="WpfCharts, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\Downloads\SpiderChart\WpfCharts\bin\Debug\WpfCharts.dll</HintPath>
+      <HintPath>..\..\..\WpfCharts.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -121,6 +121,10 @@
     <Compile Include="Migrations\201808100657041_new question.cs" />
     <Compile Include="Migrations\201808100657041_new question.Designer.cs">
       <DependentUpon>201808100657041_new question.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201808121113249_add enum.cs" />
+    <Compile Include="Migrations\201808121113249_add enum.Designer.cs">
+      <DependentUpon>201808121113249_add enum.cs</DependentUpon>
     </Compile>
     <Compile Include="Page10.xaml.cs">
       <DependentUpon>Page10.xaml</DependentUpon>
@@ -291,6 +295,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808100657041_new question.resx">
       <DependentUpon>201808100657041_new question.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808121113249_add enum.resx">
+      <DependentUpon>201808121113249_add enum.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
