Add raport page

--- a/Audyt innowacyjności/Audyt innowacyjności.csproj
+++ b/Audyt innowacyjności/Audyt innowacyjności.csproj
@@ -163,9 +163,13 @@
     <Compile Include="Page9.xaml.cs">
       <DependentUpon>Page9.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Raport.xaml.cs">
+      <DependentUpon>Raport.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Result.xaml.cs">
       <DependentUpon>Result.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModel\Comments.cs" />
     <Compile Include="ViewModel\ModelBase.cs" />
     <Compile Include="ViewModel\QuestionViewModel.cs" />
     <Compile Include="ViewModel\SurveyViewModel.cs" />
@@ -244,6 +248,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Page9.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Raport.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
